--- a/Coditech.Project/Admin/AdminCommon/Coditech.Admin.Utilities/Coditech.Admin.Utilities.csproj
+++ b/Coditech.Project/Admin/AdminCommon/Coditech.Admin.Utilities/Coditech.Admin.Utilities.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
