--- a/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
+++ b/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
@@ -7,15 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\..\Admin\AdminCommon\Coditech.Admin.Utilities\Coditech.Admin.Utilities.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
+    <ProjectReference Include="..\Coditech.Common.API\Coditech.Common.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Sort\" />
   </ItemGroup>
 
 </Project>
