--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
@@ -7,15 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.15" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <Compile Remove="TranslatorExtension.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\API\Comman\Coditech.API.Client\Coditech.API.Client.csproj" />
     <ProjectReference Include="..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
-    <ProjectReference Include="..\..\Common\Coditech.Common.CacheManager\Coditech.Common.CacheManager.csproj" />
     <ProjectReference Include="..\..\Common\Coditech.Common.Helper\Coditech.Common.Helper.csproj" />
     <ProjectReference Include="..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
     <ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
