--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -15,7 +15,8 @@
     "DeletionInterval": "5"
   },
   "appsettings": {
-    "CoditechApiRootUri": "https://localhost:7202",
+    "CoditechUserApiRootUri": "https://localhost:7202",
+    "CoditechOrganisationApiRootUri": "https://localhost:7036",
     "ApiDomainName": "localhost:7202",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
