--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -25,7 +25,8 @@
     "IsCookieSecure": "false",
     // This key is used to set the expire time of login cookie.
     "AuthenticationCookieExpireTimeSpan": "10",
-    "AuthenticationSlidingExpiration": "true"
+    "AuthenticationSlidingExpiration": "true",
+    "NotificationMessagesIsFadeOut": "true"
   },
   "AllowedHosts": "*"
 }
