--- a/Coditech.Project/API/Comman/Coditech.API.Data/Coditech.API.Data.csproj
+++ b/Coditech.Project/API/Comman/Coditech.API.Data/Coditech.API.Data.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Dapper" Version="2.0.138" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
 		<PackageReference Include="Z.EntityFramework.Extensions" Version="7.22.3" />
 	</ItemGroup>
 
