Code check-in for Notification

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -15,6 +15,9 @@
     "DeletionInterval": "5"
   },
   "appsettings": {
+    "CoditechApiUriItemSeparator": ",",
+    "CoditechCommaReplacer": "^",
+    "CoditechApiUriKeyValueSeparator": "~",
     "CoditechUserApiRootUri": "https://localhost:7202",
     "CoditechOrganisationApiRootUri": "https://localhost:7036",
     "ApiDomainName": "localhost:7202",
