--- a/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
+++ b/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
@@ -1,10 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Sort\**" />
+    <EmbeddedResource Remove="Sort\**" />
+    <None Remove="Sort\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="Client\GeneralMaster\GeneralTaxMasterClient .cs" />
@@ -16,10 +22,6 @@
     <ProjectReference Include="..\..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
     <ProjectReference Include="..\..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
     <ProjectReference Include="..\Coditech.Common.API\Coditech.Common.API.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Sort\" />
   </ItemGroup>
 
 </Project>
