--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="TranslatorExtension.cs" />
+    <Content Include="Views\Shared\_Layout.cshtml.css" />
   </ItemGroup>
 
   <ItemGroup>
