--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /Coditech.Project/Common/Coditech.Resources/bin
 /Coditech.Project/Common/Coditech.Resources/obj
 /Coditech.Project/Common/Coditech.Resources/obj
+/Coditech.Project/API/Comman/Coditech.Common.Service/bin
+/Coditech.Project/API/Comman/Coditech.Common.Service/obj
