--- a/Coditech.Project/API/Coditech.API.Organisation/Coditech.API.Organisation.csproj
+++ b/Coditech.Project/API/Coditech.API.Organisation/Coditech.API.Organisation.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
     <ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
     <ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
+    <ProjectReference Include="..\Comman\Coditech.Common.Service\Coditech.Common.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
