Code check-in for DB Project

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@
 /Coditech.Project/Common/Coditech.Resources/obj
 /Coditech.Project/API/Comman/Coditech.Common.Service/bin
 /Coditech.Project/API/Comman/Coditech.Common.Service/obj
+/Coditech.Database/Coditech.Database/obj
+/Coditech.Database/.vs/Coditech.Database/v16
+/Coditech.Database/Coditech.Database/bin
