--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Coditech.Database/Coditech.Database/obj
 /Coditech.Database/.vs/Coditech.Database/v16
 /Coditech.Database/Coditech.Database/bin
+/Coditech.Database/Coditech.Database/Coditech.Database.jfm
+/Coditech.Database/Coditech.Database/Coditech.Database.dbmdl
