Add git ignore changes

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /Coditech.Database/Coditech.Database/bin
 /Coditech.Database/Coditech.Database/Coditech.Database.jfm
 /Coditech.Database/Coditech.Database/Coditech.Database.dbmdl
+/Coditech.Database/.vs/Coditech.Database/v17
+/Coditech.Database/.vs/Coditech.Database/FileContentIndex
