Code check-in for Admin Sanction post

--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Admin.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="MediaFolder\" />
+    <Folder Include="Views\Shared\Control\" />
     <Folder Include="wwwroot\css\login\" />
     <Folder Include="wwwroot\js\login\" />
   </ItemGroup>
