Admin SN Post check-in

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /Coditech.Database/Coditech.Database/Coditech.Database.dbmdl
 /Coditech.Database/.vs/Coditech.Database/v17
 /Coditech.Database/.vs/Coditech.Database/FileContentIndex
+/Coditech.Project/API/Coditech.API.Organisation/~/data/default
+/Coditech.Project/API/Coditech.API.User/~/data/default
