--- a/Coditech.Project/API/Coditech.API.Organisation/Properties/launchSettings.json
+++ b/Coditech.Project/API/Coditech.API.Organisation/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8877",
+      "applicationUrl": "https://localhost:7036",
       "sslPort": 44312
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7036;http://localhost:5036",
+      "applicationUrl": "https://localhost:7036",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
