--- a/Coditech.Project/API/Coditech.API.User/Properties/launchSettings.json
+++ b/Coditech.Project/API/Coditech.API.User/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44485",
+      "applicationUrl": "https://localhost:7202",
       "sslPort": 44366
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7202;http://localhost:5202",
+      "applicationUrl": "https://localhost:7202",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
