Code check-in for rename project

--- a/Coditech.Project/API/Coditech.Engine.Organisation/Properties/launchSettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Coditech.API.Organization": {
+    "Coditech.Engine.Organization": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
