--- a/Coditech.Project/API/Coditech.Engine.User/Properties/launchSettings.json
+++ b/Coditech.Project/API/Coditech.Engine.User/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Coditech.API.User": {
+    "Coditech.Engine.User": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
