--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 
 /Coditech.Project/Admin/Coditech.Admin/bin
 /Coditech.Project/Admin/Coditech.Admin/obj
-/Coditech.Project/API/Coditech.API.Organisation/bin
-/Coditech.Project/API/Coditech.API.Organisation/obj
-/Coditech.Project/API/Coditech.API.User/bin
-/Coditech.Project/API/Coditech.API.User/obj
+/Coditech.Project/API/Coditech.Engine.Organisation/bin
+/Coditech.Project/API/Coditech.Engine.Organisation/obj
+/Coditech.Project/API/Coditech.Engine.User/bin
+/Coditech.Project/API/Coditech.Engine.User/obj
 /Coditech.Project/API/Comman/Coditech.API.Client/bin
 /Coditech.Project/API/Comman/Coditech.API.Client/obj
 /Coditech.Project/API/Comman/Coditech.Common.API/bin
@@ -42,5 +42,5 @@
 /Coditech.Database/Coditech.Database/Coditech.Database.dbmdl
 /Coditech.Database/.vs/Coditech.Database/v17
 /Coditech.Database/.vs/Coditech.Database/FileContentIndex
-/Coditech.Project/API/Coditech.API.Organisation/~/data/default
-/Coditech.Project/API/Coditech.API.User/~/data/default
+/Coditech.Project/API/Coditech.Engine.Organisation/~/data/default
+/Coditech.Project/API/Coditech.Engine.User/~/data/default
