--- a/Coditech.Project/Admin/Coditech.Admin/Properties/launchSettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Coditech.Admin": {
+    "Coditech.Engine.Admin": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
