--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /Coditech.Project/API/Coditech.Engine.Employee/bin
 /Coditech.Project/API/Coditech.Engine.Inventory/bin
 /Coditech.Project/API/Coditech.Engine.Inventory/obj
+/Coditech.Project/API/Coditech.Engine.GymManagementSystem/bin
+/Coditech.Project/API/Coditech.Engine.GymManagementSystem/obj
