--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -20,6 +20,9 @@
     "CoditechApiUriKeyValueSeparator": "~",
     "CoditechUserApiRootUri": "https://localhost:7202",
     "CoditechOrganisationApiRootUri": "https://localhost:7036",
+    "CoditechEmployeeApiRootUri": "https://localhost:7036",
+    "CoditechGymManagementSystemApiRootUri": "https://localhost:7147",
+    "CoditechInventoryApiRootUri": "https://localhost:7012",
     "ApiDomainName": "localhost:7202",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
