--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -21,7 +21,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Agents\Implementation\Employee\" />
+    <Folder Include="Agents\Implementation\Gym\" />
+    <Folder Include="Agents\Implementation\Inventory\" />
+    <Folder Include="Agents\Interface\Employee\" />
+    <Folder Include="Agents\Interface\Gym\" />
+    <Folder Include="Agents\Interface\Inventory\" />
+    <Folder Include="Controllers\Gym\" />
+    <Folder Include="Controllers\Employee\" />
+    <Folder Include="Controllers\Inventory\" />
     <Folder Include="MediaFolder\" />
+    <Folder Include="Views\Employee\" />
+    <Folder Include="Views\Gym\" />
+    <Folder Include="Views\Inventory\" />
     <Folder Include="Views\Shared\Control\" />
     <Folder Include="wwwroot\css\login\" />
     <Folder Include="wwwroot\js\login\" />
