--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /Coditech.Project/API/Coditech.Engine.Inventory/obj
 /Coditech.Project/API/Coditech.Engine.GymManagementSystem/bin
 /Coditech.Project/API/Coditech.Engine.GymManagementSystem/obj
+/Coditech.Project/API/Coditech.Engine.MediaManager/bin
+/Coditech.Project/API/Coditech.Engine.MediaManager/obj
