code chek-in for HMS

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /Coditech.Project/API/Coditech.Engine.GymManagementSystem/obj
 /Coditech.Project/API/Coditech.Engine.MediaManager/bin
 /Coditech.Project/API/Coditech.Engine.MediaManager/obj
+/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/bin
+/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/obj
