--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -35,4 +35,11 @@
     <Folder Include="wwwroot\js\login\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\js\Coditech\OrganisationCentreWiseBuildingMaster.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
