Added Sales purchase library

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /Coditech.Project/API/Coditech.Engine.MediaManager/obj
 /Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/bin
 /Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/obj
+/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/bin
+/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/obj
