--- a/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
+++ b/Coditech.Project/API/Comman/Coditech.API.Client/Coditech.API.Client.csproj
@@ -25,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Client\Implementation\GeneralPerson\" />
     <Folder Include="Client\Implementation\Inventory\" />
+    <Folder Include="Client\Interface\GeneralPerson\" />
     <Folder Include="Client\Interface\Inventory\" />
     <Folder Include="Endpoint\Gym\" />
     <Folder Include="Endpoint\Employee\" />
