--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -32,6 +32,7 @@
     <Folder Include="Views\Inventory\" />
     <Folder Include="Views\Shared\Control\" />
     <Folder Include="wwwroot\css\login\" />
+    <Folder Include="wwwroot\js\Coditech\Organisation\" />
     <Folder Include="wwwroot\js\login\" />
   </ItemGroup>
 
