--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@
 /Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/obj
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/bin
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/obj
+/Coditech.Project/Common/Coditech.Common.API.Model/Responses/GeneralPerson/GeneralPersonFollowUp
