--- a/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
+++ b/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\GeneralPerson\GeneralPersonAttendanceDetailsController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
