--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -24,6 +24,7 @@
     "CoditechGymManagementSystemApiRootUri": "https://localhost:7147",
     "CoditechInventoryApiRootUri": "https://localhost:7012",
     "CoditechMediaManagerApiRootUri": "https://localhost:7103",
+    "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174",
     "ApiDomainName": "localhost:7202",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
