--- a/Coditech.Project/Common/Coditech.Common.API.Model/Coditech.Common.API.Model.csproj
+++ b/Coditech.Project/Common/Coditech.Common.API.Model/Coditech.Common.API.Model.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Responses\SalesAndPurchase\" />
+    <Folder Include="SalesAndPurchase\NewFolder\" />
+  </ItemGroup>
+
 </Project>
