Code correction for HospitalDoctors

--- a/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/Coditech.Engine.HospitalManagementSystem.csproj
+++ b/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/Coditech.Engine.HospitalManagementSystem.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
     <ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
     <ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
+    <ProjectReference Include="..\Comman\Coditech.Common.Service\Coditech.Common.Service.csproj" />
   </ItemGroup>
 
 </Project>
