--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -34,7 +34,8 @@
     // This key is used to set the expire time of login cookie.
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
-    "NotificationMessagesIsFadeOut": "true"
+    "NotificationMessagesIsFadeOut": "true",
+    "ApplicationLogoPath": "../assets/images/Gym_png.png"
   },
   "AllowedHosts": "*"
 }
