--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/bin
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/obj
 /Coditech.Project/Common/Coditech.Common.API.Model/Responses/GeneralPerson/GeneralPersonFollowUp
+/Coditech.Project/API/Coditech.Engine.GymManagementSystem/~/data/default/logs/2024-03-31
