--- a/Coditech.Project/API/Coditech.Engine.GymManagementSystem/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.GymManagementSystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CoditechDatabase": "Server=108.181.171.71;Database=CoditechGeneralDB;User Id=sa;Password=saralsoftservices0098#$; TrustServerCertificate=True"
+    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
   },
   "appsettings": {
     "ValidateRequestAPI": "false",
