--- a/Coditech.Project/API/Comman/Coditech.Common.Service/Coditech.Common.Service.csproj
+++ b/Coditech.Project/API/Comman/Coditech.Common.Service/Coditech.Common.Service.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
-    <ProjectReference Include="..\..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
-    <ProjectReference Include="..\Coditech.API.Data\Coditech.API.Data.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="MailKit" Version="4.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\Common\Coditech.Common.API.Model\Coditech.Common.API.Model.csproj" />
+		<ProjectReference Include="..\..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
+		<ProjectReference Include="..\Coditech.API.Data\Coditech.API.Data.csproj" />
+	</ItemGroup>
 
 </Project>
