--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -35,7 +35,8 @@
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
     "NotificationMessagesIsFadeOut": "true",
-    "ApplicationLogoPath": "../assets/images/Gym_png.png"
+    "ApplicationLogoPath": "../assets/images/Gym_png.png",
+    "ApplicationTitle": "Admin Application"
   },
   "AllowedHosts": "*"
 }
