adding application logo

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -35,7 +35,7 @@
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
     "NotificationMessagesIsFadeOut": "true",
-    "ApplicationLogoPath": "../assets/images/Gym_png.png",
+    "ApplicationLogoPath": "../assets/images/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application"
   },
   "AllowedHosts": "*"
