--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,13 @@
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/bin
 /Coditech.Project/API/Coditech.Engine.SalesAndPurchase/obj
 /Coditech.Project/Common/Coditech.Common.API.Model/Responses/GeneralPerson/GeneralPersonFollowUp
-/Coditech.Project/API/Coditech.Engine.GymManagementSystem/~/data/default/logs/2024-03-31
-/Coditech.Project/API/Coditech.Engine.GymManagementSystem/~/data/default/logs/2024-04-03
-/Coditech.Project/API/Coditech.Engine.GymManagementSystem/~/data/default/logs/2024-04-06
+/Coditech.Project/Admin/Coditech.Admin/Properties/PublishProfiles
+/Coditech.Project/Admin/Coditech.Admin/Properties/PublishProfiles
+/Coditech.Project/Admin/Coditech.Admin/.config/dotnet-tools.json
+/Coditech.Project/API/Coditech.Engine.Employee/.config/dotnet-tools.json
+/Coditech.Project/API/Coditech.Engine.Employee/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.Employee/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.GymManagementSystem/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.Inventory/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.Organisation/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.User/Properties/PublishProfiles
