--- a/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/Coditech.Engine.SalesAndPurchase.csproj
+++ b/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/Coditech.Engine.SalesAndPurchase.csproj
@@ -1,24 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<InvariantGlobalization>true</InvariantGlobalization>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Admin\AdminCommon\Coditech.Admin.Utilities\Coditech.Admin.Utilities.csproj" />
-    <ProjectReference Include="..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
-    <ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
-    <ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
-    <ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<Content Update="appsettings.Development.json">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+		<Content Update="appsettings.json">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	
+	<ItemGroup>
+		<ProjectReference Include="..\..\Admin\AdminCommon\Coditech.Admin.Utilities\Coditech.Admin.Utilities.csproj" />
+		<ProjectReference Include="..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
+		<ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
+		<ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
+		<ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
+	</ItemGroup>
 
 </Project>
