--- a/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
+++ b/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
@@ -1,36 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Service\GeneralPerson\**" />
-    <Content Remove="Service\GeneralPerson\**" />
-    <EmbeddedResource Remove="Service\GeneralPerson\**" />
-    <EntityDeploy Remove="Service\GeneralPerson\**" />
-    <None Remove="Service\GeneralPerson\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Service\GeneralPerson\**" />
+		<Content Remove="Service\GeneralPerson\**" />
+		<EmbeddedResource Remove="Service\GeneralPerson\**" />
+		<EntityDeploy Remove="Service\GeneralPerson\**" />
+		<None Remove="Service\GeneralPerson\**" />
+		<Content Update="appsettings.Development.json">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+		<Content Update="appsettings.json">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Admin\AdminCommon\Coditech.Admin.Utilities\Coditech.Admin.Utilities.csproj" />
-    <ProjectReference Include="..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
-    <ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
-    <ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
-    <ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
-    <ProjectReference Include="..\Comman\Coditech.Common.Service\Coditech.Common.Service.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Admin\AdminCommon\Coditech.Admin.Utilities\Coditech.Admin.Utilities.csproj" />
+		<ProjectReference Include="..\..\Common\Coditech.Common.Logger\Coditech.Common.Logger.csproj" />
+		<ProjectReference Include="..\..\Common\Coditech.Resources\Coditech.Resources.csproj" />
+		<ProjectReference Include="..\Comman\Coditech.API.Data\Coditech.API.Data.csproj" />
+		<ProjectReference Include="..\Comman\Coditech.Common.API\Coditech.Common.API.csproj" />
+		<ProjectReference Include="..\Comman\Coditech.Common.Service\Coditech.Common.Service.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Data\" />
+	</ItemGroup>
 
 </Project>
