--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -31,6 +31,7 @@
     "CookieExpiresValue": "2",
     "IsCookieHttpOnly": "false",
     "IsCookieSecure": "false",
+    "EnableFileLogging": "0",
     // This key is used to set the expire time of login cookie.
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
