--- a/Coditech.Project/API/Coditech.Engine.Inventory/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Inventory/appsettings.json
@@ -17,7 +17,8 @@
     "MinifiedJsonResponseFromAPI": "false",
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
-    "CoditechApiUriKeyValueSeparator": "~"
+    "CoditechApiUriKeyValueSeparator": "~",
+    "EnableFileLogging": "0"
   },
   "AllowedHosts": "*"
 }
