--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -9,9 +9,13 @@
 
 	<ItemGroup>
 		<Compile Remove="Views\Dashboard\NewFolder\**" />
+		<Compile Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<Content Remove="Views\Dashboard\NewFolder\**" />
+		<Content Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<EmbeddedResource Remove="Views\Dashboard\NewFolder\**" />
+		<EmbeddedResource Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<None Remove="Views\Dashboard\NewFolder\**" />
+		<None Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<Content Update="appsettings.Development.json">
 			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -40,7 +44,6 @@
 		<Folder Include="MediaFolder\" />
 		<Folder Include="wwwroot\assets\images\jstree\" />
 		<Folder Include="wwwroot\css\login\" />
-		<Folder Include="wwwroot\js\Coditech\GeneralMaster\" />
 		<Folder Include="wwwroot\js\login\" />
 	</ItemGroup>
 
