Reviewed Ui changes related to Header Logo and Card header

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -37,7 +37,8 @@
     "AuthenticationSlidingExpiration": "true",
     "NotificationMessagesIsFadeOut": "true",
     "ApplicationLogoPath": "../assets/images/ApplicationLogo.png",
-    "ApplicationTitle": "Admin Application"
+    "ApplicationTitle": "Admin Application",
+    "ApplicationLogoBackground": "#ffffff"
   },
   "AllowedHosts": "*"
 }
