UI changes related to Layout background and card view

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -38,7 +38,8 @@
     "NotificationMessagesIsFadeOut": "true",
     "ApplicationLogoPath": "../assets/images/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application",
-    "ApplicationLogoBackground": "#ffffff"
+    "ApplicationLogoBackground": "#ffffff",
+    "ApplicationLayoutBackground": "../assets/images/GymImage.jpg"
   },
   "AllowedHosts": "*"
 }
