--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -39,7 +39,7 @@
     "ApplicationLogoPath": "../assets/images/ApplicationLogo.png",
     "ApplicationTitle": "Admin Application",
     "ApplicationLogoBackground": "#ffffff",
-    "ApplicationLayoutBackground": "../assets/images/GymImage.jpg"
+    "ApplicationLayoutBackground": "../assets/images/auth-bg.png"
   },
   "AllowedHosts": "*"
 }
