--- a/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
+++ b/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
@@ -7,11 +7,13 @@
 		<InvariantGlobalization>true</InvariantGlobalization>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Magick.NET-Q8-x64" Version="13.5.0" />
+    <PackageReference Include="Magick.NET.Core" Version="13.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<Content Update="appsettings.Development.json">
