Hospital Patient Registration Implementation

--- a/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
+++ b/Coditech.Project/Admin/Coditech.Admin/Coditech.Engine.Admin.csproj
@@ -8,13 +8,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Compile Remove="Reports\**" />
 		<Compile Remove="Views\Dashboard\NewFolder\**" />
 		<Compile Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<Compile Remove="wwwroot\js\Coditech\NewFolder1\**" />
+		<Content Remove="Reports\**" />
 		<Content Remove="Views\Dashboard\NewFolder\**" />
 		<Content Remove="wwwroot\js\Coditech\GeneralMaster\**" />
+		<EmbeddedResource Remove="Reports\**" />
 		<EmbeddedResource Remove="Views\Dashboard\NewFolder\**" />
 		<EmbeddedResource Remove="wwwroot\js\Coditech\GeneralMaster\**" />
+		<None Remove="Reports\**" />
 		<None Remove="Views\Dashboard\NewFolder\**" />
 		<None Remove="wwwroot\js\Coditech\GeneralMaster\**" />
 		<None Remove="wwwroot\js\Coditech\NewFolder1\**" />
@@ -44,7 +48,6 @@
 
 	<ItemGroup>
 		<Folder Include="MediaFolder\" />
-		<Folder Include="Reports\Gym\" />
 		<Folder Include="wwwroot\assets\images\jstree\" />
 		<Folder Include="wwwroot\css\login\" />
 		<Folder Include="wwwroot\js\login\" />
