Date format correction

--- a/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
+++ b/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
@@ -35,4 +35,8 @@
 		<ProjectReference Include="..\Comman\Coditech.Common.Service\Coditech.Common.Service.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Data\ApplicationImages\" />
+	</ItemGroup>
+
 </Project>
