--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@
 /Coditech.Project/API/Coditech.Engine.User/.config/dotnet-tools.json
 /Coditech.Project/Coditech.Reports/bin
 /Coditech.Project/Coditech.Reports/Coditech.Reports.rptproj.rsuser
+/Coditech.Project/API/Coditech.Engine.MediaManager/Properties/PublishProfiles
