--- a/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/Coditech.Engine.SalesAndPurchase.csproj
+++ b/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/Coditech.Engine.SalesAndPurchase.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+		<Content Include="data\**" CopyToPublishDirectory="PreserveNewest" />
 		<Content Update="appsettings.Development.json">
 			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
