--- a/Coditech.Project/API/Coditech.Engine.Inventory/Coditech.Engine.Inventory.csproj
+++ b/Coditech.Project/API/Coditech.Engine.Inventory/Coditech.Engine.Inventory.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Include="data\**" CopyToPublishDirectory="PreserveNewest" />
 		<Content Update="appsettings.Development.json">
 			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
