--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "appsettings": {
+    "CoditechUserApiRootUri": "https://localhost:7202",
+    "CoditechOrganisationApiRootUri": "https://localhost:7036",
+    "CoditechEmployeeApiRootUri": "https://localhost:7012",
+    "CoditechGymManagementSystemApiRootUri": "https://localhost:7147",
+    "CoditechInventoryApiRootUri": "https://localhost:7203",
+    "CoditechMediaManagerApiRootUri": "https://localhost:7103",
+    "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174"
   }
 }
