--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -8,7 +8,6 @@
   //Below settings is used for to set session.
   "SessionState": {
     "EnableSQLSession": "False",
-    "SessionConnectionString": "Server={Your Serve Name};Database={Your Database Name};User Id={Your UserName};Password={Your Password}; TrustServerCertificate=True",
     "SessionTableName": "CoditechSQLSessionState",
     "SessionSchemaName": "dbo",
     "IdleTimeout": "20",
@@ -18,20 +17,14 @@
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
-    "CoditechUserApiRootUri": "https://localhost:7202",
-    "CoditechOrganisationApiRootUri": "https://localhost:7036",
-    "CoditechEmployeeApiRootUri": "https://localhost:7012",
-    "CoditechGymManagementSystemApiRootUri": "https://localhost:7147",
-    "CoditechInventoryApiRootUri": "https://localhost:7203",
-    "CoditechMediaManagerApiRootUri": "https://localhost:7103",
-    "CoditechHospitalManagementSystemApiRootUri": "https://localhost:7174",
-    "ApiDomainName": "localhost:7202",
+    "Scheme": "http://",
+    "ApiDomainName": "coditech.co.in",
     "ApiDomainKey": "8a8b4931-7d57-42e8-a005-b1c0cce49f1d",
     //Cookie setting.
     "CookieExpiresValue": "2",
     "IsCookieHttpOnly": "false",
     "IsCookieSecure": "false",
-    "EnableFileLogging": "0",
+    "EnableFileLogging": "1",
     // This key is used to set the expire time of login cookie.
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
