--- a/Coditech.Project/API/Coditech.Engine.Employee/appsettings.Development.json
+++ b/Coditech.Project/API/Coditech.Engine.Employee/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
   }
 }
