--- a/Coditech.Project/API/Coditech.Engine.GymManagementSystem/appsettings.Development.json
+++ b/Coditech.Project/API/Coditech.Engine.GymManagementSystem/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
     }
   }
 }
