--- a/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.SalesAndPurchase/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
+    "CoditechDatabase": ""
   },
   "appsettings": {
     "ValidateRequestAPI": "false",
@@ -18,7 +18,7 @@
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
-    "EnableFileLogging": "0"
+    "EnableFileLogging": "1"
   },
   "AllowedHosts": "*"
 }
