--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -13,6 +13,9 @@
     "IdleTimeout": "20",
     "DeletionInterval": "5"
   },
+  "ConnectionStrings": {
+    "CoditechDatabase": "Server=108.181.194.83;Database=CoditechDevelopmentDB;User Id=sa;Password=myfirstvps#01; TrustServerCertificate=True"
+  },
   "appsettings": {
     "CoditechApiUriItemSeparator": ",",
     "CoditechCommaReplacer": "^",
@@ -24,7 +27,7 @@
     "CookieExpiresValue": "2",
     "IsCookieHttpOnly": "false",
     "IsCookieSecure": "false",
-    "EnableFileLogging": "1",
+    "EnableFileLogging": "0",
     // This key is used to set the expire time of login cookie.
     "AuthenticationCookieExpireTimeSpan": "10",
     "AuthenticationSlidingExpiration": "true",
