Remove User API

--- a/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
+++ b/Coditech.Project/API/Coditech.Engine.User/Coditech.Engine.User.csproj
@@ -35,7 +35,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Controllers\GeneralPerson\" />
 		<Folder Include="Data\" />
+		<Folder Include="Service\Implementation\" />
+		<Folder Include="Service\Interface\" />
 	</ItemGroup>
 
 </Project>
