Media Folder Access Change

--- a/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
+++ b/Coditech.Project/API/Coditech.Engine.MediaManager/Coditech.Engine.MediaManager.csproj
@@ -34,6 +34,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Data\ApplicationImages\" />
+	  <Folder Include="Data\Media\ApplicationIcon\" />
 	</ItemGroup>
 
 </Project>
