--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@
 /Coditech.Project/API/Coditech.Engine.Gazette/obj
 /Coditech.Project/API/Coditech.Engine.Gazette/Coditech.Engine.Gazette.csproj.user
 /Coditech.Project/API/Coditech.Engine.MediaManager/Data/Media
+/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/.config/dotnet-tools.json
+/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/Properties/PublishProfiles
+/Coditech.Project/API/Coditech.Engine.HospitalManagementSystem/Coditech.Engine.HospitalManagementSystem.csproj.user
