GMSD-70:LOGIN - Unable to Reset Password via Email and Mobile Number – OTP Expired.

--- a/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
+++ b/Coditech.Project/API/Coditech.Engine.Organisation/appsettings.json
@@ -19,7 +19,8 @@
     "CoditechCommaReplacer": "^",
     "CoditechApiUriKeyValueSeparator": "~",
     "EnableFileLogging": "0",
-    "ApiDomainRequestKey": "954FA6B4-132F-439E-BEA9-48730D3442B0"
+    "ApiDomainRequestKey": "954FA6B4-132F-439E-BEA9-48730D3442B0",
+    "ResetPasswordExpriedTimeInMinute": "10"
   },
   "AllowedHosts": "*"
 }
