Add Maintenance page

--- a/Coditech.Project/Admin/Coditech.Admin/appsettings.json
+++ b/Coditech.Project/Admin/Coditech.Admin/appsettings.json
@@ -38,7 +38,8 @@
     "ApplicationLayoutBackground": "../assets/images/auth-bg.png",
     "IsDefaultTheme": "true",
     "ThemeColor": "red",
-    "DefaultDashboardDataDays": "30"
+    "DefaultDashboardDataDays": "30",
+    "MaintenanceMode": "true"
   },
   "AllowedHosts": "*"
 }
